Tweaked onboarding copy

--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -15,7 +15,7 @@
       <div class="textgroup-ingress row">on this focus view you can see your
         <span class="text-highlighted">favorite</span> notes
       </div>
-      <div class="textgroup-ingress last row">add favorite notes here or by clicking star in a note editor</div>
+      <div class="textgroup-ingress last row">add favorite notes here or by clicking star in note editor</div>
     </div>
   </section>
   <footer ng-if="!isOnboarded('focusNotes')" class="container-content--after group-btn">
