--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -35,8 +35,8 @@
       <h2 class="group-heading instruction row">never lose an
         <span class="highlighted">idea</span>
       </h2>
-      <div class="textgroup-ingress row">use the inbox to
-        <span class="text-highlighted">quickly</span> store ideas and tasks as they pop into your head
+      <div class="textgroup-ingress row">use the
+        <span class="text-highlighted">inbox</span> to store ideas and tasks as they pop into your head
       </div>
       <div class="textgroup-ingress last row">add items by hitting the logo that's always in the top-right corner</div>
     </div>
