--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -23,8 +23,7 @@
         </div>
       </form>
       <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', 'on')" class="group-instruction-input">
-        <div ng-if="!titlebar.text || titlebar.text.length === 0" class="text-details row">e.g. books to read, notes from a
-         conversation, plans for the summer</div>
+        <div ng-if="!titlebar.text || titlebar.text.length === 0" class="text-details row">e.g. reading suggestions, budget meeting minutes, summer plans</div>
          <div ng-if="titlebar.text.length && !hideNoteTitle" class="text-details row">when done, hit return</div>
        </div>
      </div>
@@ -56,7 +55,7 @@
 
             <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', 'on')" class="group-instruction-input">
               <div ng-if="note.content.length" class="text-details row">when done, save your note by
-                clicking save in the top-left corner or swipe left
+                clicking 'save' in the top-left corner or swipe left
               </div>
             </div>
           </div>
