--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -19,6 +19,7 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   </div>
 </form>
 <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', 'on')" class="group-instruction-input">
-  <div ng-if="!newItem.title || newItem.title.length === 0" class="text-details row">e.g. buy a book, call a friend, do a leg workout</div>
+  <div ng-if="!newItem.title || newItem.title.length === 0" class="text-details row">
+  e.g. call mom, email boss, buy milk</div>
   <div ng-if="newItem.title.length" class="text-details row">when done, hit return</div>
 </div>
