--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -26,8 +26,8 @@
       <h2 class="group-heading instruction row"><span ng-if="isOneOnboardingItemCreated('tasks')">first</span>
         <span class="highlighted">task</span> created!
       </h2>
-      <div class="textgroup-ingress row">you can now go to <span class="highlighted">notes</span> by clicking
-      the <span class="highlighted">menu icon</span> in the top-left corner</div>
+      <div class="textgroup-ingress row">go to <span class="text-highlighted">notes</span> by clicking
+      the menu icon in the top-left corner</div>
       <div class="text-normal row">&#8230;or add more tasks by hitting the plus sign again</div>
     </div>
   </section>
