--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -20,6 +20,6 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   </div>
 </form>
 <div ng-if="!isOnboarded('lists') && checkListOnboardingLock('lists', 'on')" class="group-instruction-input">
-  <div ng-if="!newItem.title || newItem.title.length === 0" class="text-details row">e.g. work, studies, groceries</div>
+  <div ng-if="!newItem.title || newItem.title.length === 0" class="text-details row">e.g. groceries, studies, company retreat</div>
   <div ng-if="newItem.title.length" class="text-details row">when done, hit return</div>
 </div>
