--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -19,7 +19,7 @@
       <h2 class="group-heading instruction row">
         <span class="highlighted">note</span> created!
       </h2>
-      <div class="textgroup-ingress row">when you're ready, make your way to <span class="highlighted">lists</span>
+      <div class="textgroup-ingress row">make your way to <span class="text-highlighted">lists</span>
       by using the menu</div>
       <div class="text-normal row">&#8230;or add more notes by hitting the plus sign again</div>
     </div>
