Fixed iPhone4 log in / sign up screens, added smallDeviceHeight variable for height less than 500px (iPhone4 has 480)

--- a/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
@@ -6,7 +6,7 @@
       </a>
     </header>
     <div ng-if="!resetCodeExpires">
-      <h2 class="group-heading row-form">forgot password?</h2>
+      <h2 class="group-heading row-form" editable-field-deactivate>forgot password?</h2>
       <div class="row-form">
         <input type="email" name="email" ng-model="user.username"
         placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
