--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -1,12 +1,12 @@
 <!-- SIGNUP -->
 <form ng-if="entryState === 'signup'" name="signupForm">
   <section class="container-content" editable-field-container>
-    <header class="group-symmetrical">
+    <header ng-hide="smallDeviceHeight && softKeyboard.height" class="group-symmetrical">
       <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation" editable-field-deactivate>
         <span class="text-navigation-back">back</span>
       </a>
     </header>
-    <h2 class="group-heading row-form">sign up</h2>
+    <h2 class="group-heading row-form" editable-field-deactivate>sign up</h2>
     <div class="row-form">
       <input type="email" name="email" ng-model="user.username"
       placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
@@ -65,7 +65,7 @@
         <span class="text-navigation-forward">forgot?</span>
       </a>
     </header>
-    <h2 class="group-heading row-form">log in</h2>
+    <h2 class="group-heading row-form" editable-field-deactivate>log in</h2>
     <div class="row-form">
       <input type="email" name="email" ng-model="user.username"
       placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
