--- a/frontend/core/src/main/webapp/static/app/root/root.html
+++ b/frontend/core/src/main/webapp/static/app/root/root.html
@@ -1,2 +1,2 @@
-<div class="container-root" ng-view editable-field-backdrop ng-class="currentHeight <= 500 && 'height-small'">
+<div class="container-root" ng-view editable-field-backdrop ng-class="smallDeviceHeight && 'height-small'">
 </div>
