--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -57,8 +57,8 @@
               </a>
             </div>
 
-            <div ng-hide="calendarOpen" class="row-form" editable-field-container>
-              <textarea ng-model="task.transientProperties.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024" ng-focus="setDescriptionFocus(true)" ng-blur="setDescriptionFocus(false)" editable-field></textarea>
+            <div ng-hide="calendarOpen" class="row-form">
+              <textarea ng-model="task.transientProperties.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024" ng-focus="setDescriptionFocus(true)" ng-blur="setDescriptionFocus(false)"></textarea>
             </div>
 
           </div>
