Clamp task title into two rows when calendar is open in editor. Set font color gray in list picker etc. labels/placeholders.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -42,7 +42,7 @@
 
           <div ng-if="!listPickerOpen">
             <div ng-hide="mode === 'fullScreen'" class="row-form">
-              <a href ng-click="openListPicker()">
+              <a href ng-class="{downplayed: !note.transientProperties.list}" ng-click="openListPicker()">
                 <span class="text-link" ng-bind="note.transientProperties.list ? getListTitleFromUUID(note.transientProperties.list) : 'select list\u2026'"></span>
               </a>
             </div>
