Clamp and title visibility fixes in editor etc.  * Clamp title and hide footer in note and task editor when picker or description is focused/open.  * Moved context picker code from editorController to taskEditorController  * Clamp note title in lists

--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,7 +1,7 @@
 <div class="group-mixed">
   <div class="group-mixed--middle">
     <a href class="link-note-heading link-list-item" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
-      <span class="text-heading-primary" ng-bind="note.title"></span>
+      <span class="text-heading-primary" ng-bind="note.title" clamp=2></span>
     </a>
   </div>
   <div ng-if="note.transientProperties.favorited" class="group-mixed--right">
