--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -16,10 +16,15 @@
 
       <form ng-hide="hideNoteTitle && isOnboarded('notes')" role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
-          <textarea type="text" ng-model="titlebar.text" ng-keydown="noteTitlebarTextKeyDown($event)"
+          <textarea ng-hide="isTitleClamped()" type="text" class="text-heading-primary" ng-model="titlebar.text" ng-keydown="noteTitlebarTextKeyDown($event)"
           editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
           msd-elastic dynamic-placeholder="enter note title&#8230;" maxlength="128" required
           ng-focus="noteTitleFocused()"></textarea>
+
+          <div ng-if="isTitleClamped()">
+            <span class="text-heading-primary" ng-class="{'text-downplayed': !titlebar.text}" ng-bind="titlebar.text ? titlebar.text : 'enter note title&#8230;'" clamp=2></span>
+          </div>
+
         </div>
       </form>
       <div ng-if="!isOnboarded('notes') && checkListOnboardingLock('notes', 'on')" class="group-instruction-input">
@@ -62,7 +67,7 @@
           </div>
         </div>
 
-        <footer ng-hide="mode === 'fullScreen'" class="container-content--after editor-footer">
+        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-hide="onboardingInProgress" ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!note.transientProperties.favorited && 'inactive'"></span>
@@ -105,7 +110,7 @@
           </div>
 
         </div>
-        <footer class="container-content--after editor-footer" editor-footer="advancedSlideInfo">
+        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer" editor-footer="advancedSlideInfo">
 
           <div class="table">
             <div class="table-row">
