Changed URL into a text area for better usability

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -47,7 +47,8 @@
         swiper-prevent>
 
           <div class="row-form">
-            <input type="text" ng-model="list.link" placeholder="enter url&#8230;">
+            <textarea type="text" ng-model="list.link" msd-elastic maxlength="128" placeholder="enter url&#8230;">
+            </textarea>
           </div>
         </div>
 
