--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -25,7 +25,8 @@
     <div class="container-content" drawer-override-aisle="right">
 
       <div class="row-form">
-        <input type="text" ng-model="tag.link" placeholder="enter url&#8230;">
+        <textarea type="text" ng-model="tag.link" msd-elastic maxlength="128" placeholder="enter url&#8230;">
+        </textarea>
       </div>
 
       <div class="row-form">
