Give possibility to set date quickly for tasks with no date, add possibility to set date to today

--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -2,17 +2,18 @@
 
   <div class="table-row">
     <a href class="table-cell" ng-click="setDateFirstDayOfNextMonth()">next month</a>
-    <a href class="table-cell" ng-click="setDateToSecondMonday()">two weeks</a>
-  </div>
-
-  <div class="table-row">
     <a href class="table-cell" ng-click="setDateFirstDayOfNextWeek()">next week</a>
-    <a href class="table-cell" ng-click="setDateNextWeekend()">next weekend</a>
   </div>
 
   <div class="table-row">
+    <a href class="table-cell" ng-click="setDateNextWeekend()">next weekend</a>
     <a href class="table-cell" ng-click="setDateDayAfterTomorrow()">day after tomorrow</a>
+
+  </div>
+
+  <div class="table-row">
     <a href class="table-cell" ng-click="setDateTomorrow()">tomorrow</a>
+    <a href class="table-cell" ng-click="setDateToday()">today</a>
   </div>
 
 </div>
