--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -71,7 +71,7 @@
         <footer ng-hide="isTaskFooterHidden()" class="container-content--after editor-footer" editor-footer="basicSlideInfo">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
-              <a href id="editorFooterExpandLink" ng-if="task.transientProperties.date" ng-click="toggleExpand()">
+              <a href id="editorFooterExpandLink" ng-click="toggleExpand()">
                 <span id="editorFooterExpandIcon" class="text-calendar"></span>
               </a>
             </div>
