--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,6 +1,6 @@
-<div class="group-mixed">
+<div class="group-mixed with-teaser">
   <div class="group-mixed--middle">
-    <a href class="link-note-heading link-list-item" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
+    <a href class="link-list-item" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
       <span class="text-heading-primary" ng-bind="note.title" clamp=2></span>
     </a>
   </div>
