--- a/frontend/core/src/main/webapp/static/app/admin/admin.html
+++ b/frontend/core/src/main/webapp/static/app/admin/admin.html
@@ -1,62 +1,69 @@
-<div class="single-page-container" ng-controller="AdminController">
-  <section class="one-column-grid single-page page" register-element-to-feature="admin" register-element-to-feature-snap="left">
-    <div class="column">
-      <div class="page-content-container single-page-content-container" ng-switch on="adminMode">
-        <ul ng-switch-default class="scroll-container">
-          <li class="simple-content">
-            <h3>users</h3>
-            <a href ng-click="gotoUsers()" ng-bind="userCount"></a>
-          </li>
-          <li class="simple-content">
-            <h3>invites</h3>
-            <a href ng-click="gotoInvites()" ng-bind="inviteCount"></a>
-          </li>
-          <li class="simple-content">
-            <h3>invite requests</h3>
-            <a href ng-click="gotoInviteRequests()" ng-bind="inviteRequestCount"></a>
-          </li>
-          <li class="simple-content">
-            <h3>items</h3>
-            <span>{{itemCount}}</span>
-          </li>
-        </ul>
-        <ul ng-switch-when="users" class="scroll-container">
-          <li>
-            <a href class="highlighted-link" ng-click="gotoStatistics()">back</a>
-          </li>
-          <li class="simple-content" ng-repeat="user in users | orderBy:'created':true">
-            <a ng-href="mailto:{{user.email}}" ng-bind="user.email"></a> since: {{getDateString(user.created)}}
-            <form role="form" ng-submit="destroyUser(user)">
-              <input type="text" class="simple-input font-small" ng-model="user.destroy" placeholder="write 'destroy [email]' to destroy the user&#8230;"/>
-            </form>
-          </li>
-        </ul>
-        <ul ng-switch-when="invites">
-          <li>
-            <a href class="highlighted-link" ng-click="gotoStatistics()">back</a>
-          </li>
-          <li class="simple-content" ng-repeat="invite in invites | orderBy:'accepted':true">
-            <a ng-href="mailto:{{invite.email}}" ng-bind="invite.email"></a> modified: {{getDateString(invite.modified)}}
-            <div ng-if="invite.accepted">accepted: {{getDateString(invite.accepted)}}</div>
-            <div ng-if="!invite.accepted && !invite.resent">
-              <a href class="highlighted-link" ng-click="resendInvite(invite)">resend</a>
-              <a href class="warning-link" ng-click="deleteInvite(invite)">delete</a>
-            </div>
-            <div ng-if="!invite.accepted && invite.resent">
-              resent
-            </div>
-          </li>
-        </ul>
-        <ul ng-switch-when="inviteRequests" class="scroll-container">
-          <li>
-            <a href class="highlighted-link" ng-click="gotoStatistics()">back</a>
-          </li>
-          <li class="simple-content" ng-repeat="inviteRequest in inviteRequests">
-            <a ng-href="mailto:{{inviteRequest.email}}" ng-bind="inviteRequest.email"></a> modified: {{getDateString(inviteRequest.modified)}}<br/><a href class="highlighted-link" ng-click="acceptInviteRequest(inviteRequest)">accept</a>
-            <a href class="warning-link" ng-click="deleteInviteRequest(inviteRequest)">delete</a>
-          </li>
-        </ul>
+<div class="container-fluid--inner" list-container drawer-handle="left" ng-controller="AdminController"
+ng-switch on="adminMode">
+  <section ng-switch-default class="container-content">
+    <h2 class="group-heading row justified">stats</h2>
+    <div class="row-form">
+      <h3>users</h3>
+      <a href class="highlighted" ng-click="gotoUsers()"><span ng-bind="userCount"></span></a>
+    </div>
+    <div class="row-form">
+      <h3>invites</h3>
+      <a href class="highlighted" ng-click="gotoInvites()"><span ng-bind="inviteCount"></span></a>
+    </div>
+    <div class="row-form">
+      <h3>invite requests</h3>
+      <a href class="highlighted" ng-click="gotoInviteRequests()">
+        <span ng-bind="inviteRequestCount"></span>
+      </a>
+    </div>
+    <div class="row-form">
+      <h3>items</h3>
+      <span ng-bind="itemCount"></span>
+    </div>
+  </section>
+  <section ng-switch-when="users" class="container-content">
+    <h2 class="group-heading row justified">users</h2>
+    <div class="row-form">
+      <a href class="highlighted" ng-click="gotoStatistics()"><span>back</span></a>
+    </div>
+    <div class="row-form" ng-repeat="user in users | orderBy:'created':true">
+      <a ng-href="mailto:{{user.email}}" ng-bind="user.email"></a>
+      <span class="text-details">since: {{getDateString(user.created)}}</span>
+      <form role="form" ng-submit="destroyUser(user)">
+        <input type="text" class="text-details" ng-model="user.destroy" placeholder="write 'destroy [email]' to destroy the user&#8230;"/>
+      </form>
+    </div>
+  </section>
+  <section ng-switch-when="invites" class="container-content">
+    <h2 class="group-heading row justified">invites</h2>
+    <div class="row-form">
+      <a href class="highlighted" ng-click="gotoStatistics()"><span>back</span></a>
+    </div>
+    <div class="row-form" ng-repeat="invite in invites | orderBy:'accepted':true">
+      <a ng-href="mailto:{{invite.email}}" ng-bind="invite.email"></a>
+      <span class="text-details">modified: {{getDateString(invite.modified)}}</span><br/>
+      <span ng-if="invite.accepted" class="text-details">accepted: {{getDateString(invite.accepted)}}</span>
+      <div ng-if="!invite.accepted && !invite.resent">
+        <a href class="highlighted" ng-click="resendInvite(invite)">
+          <span class="text-details">resend</span>
+        </a>
+        <a href ng-click="deleteInvite(invite)"><span class="text-error">delete</span></a>
       </div>
+      <div ng-if="!invite.accepted && invite.resent">resent</div>
+    </div>
+  </section>
+  <section ng-switch-when="inviteRequests" class="container-content">
+    <h2 class="group-heading row justified">invite requests</h2>
+    <div class="row-form">
+      <a href class="highlighted" ng-click="gotoStatistics()"><span>back</span></a>
+    </div>
+    <div class="row-form" ng-repeat="inviteRequest in inviteRequests">
+      <a ng-href="mailto:{{inviteRequest.email}}" ng-bind="inviteRequest.email"></a>
+      <span class="text-details">modified: {{getDateString(inviteRequest.modified)}}</span><br/>
+      <a href class="highlighted" ng-click="acceptInviteRequest(inviteRequest)">
+        <span class="text-details">accept</span>
+      </a>
+      <a href ng-click="deleteInviteRequest(inviteRequest)"><span class="text-error">delete</span></a>
     </div>
   </section>
 </div>
